--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "e2e": "cypress open"
+    "cypress": "cypress open",
+    "percy":"percy exec -- cypress run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@percy/cypress": "^3.1.0",
     "cypress": "^7.2.0",
     "cypress-cucumber-preprocessor": "^4.1.0"
   },
